--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta property="og:title" content="Spartapedia Movie" />
+    <meta property="og:description" content="You Can Save Your Favorite Movie" />
+    <meta property="og:image" content="https://cdn.glitch.global/e6d02bfe-2c13-48f2-86df-94fe2a306654/alex-litvin-MAYsdoYpGuk-unsplash.jpg?v=1696886091158" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
